# Finder_All

./: .gitignore  README.md  index.html  package-lock.json  package.json
.github/workflows/: ci.yml  release.yml
src/: App.tsx  api.ts  styles.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: index.rs  lib.rs  main.rs  models.rs  watcher.rs
src-tauri/tests/: test_core.rs
src/components/: CommandPanel.tsx  EmptyState.tsx  FileList.tsx  FilePreview.tsx  HelpPanel.tsx  SearchBar.tsx  Sidebar.tsx  StatusBar.tsx
