[package]
name = "finder-all"
version = "0.1.0"
description = "A cross-platform fast file search tool"
authors = ["you"]
edition = "2021"

[lib]
name = "finder_all_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = [] }
opener = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
walkdir = "2.5"
fuzzy-matcher = "0.3"
rayon = "1.10"
once_cell = "1.19"
parking_lot = "0.12"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
